--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <title>Danielle Larson Homepage</title>
 </head>
 <body class="hero-body">
-    <header class="hero-box">
+<header class="hero-box">
         <section class="hero-image-box">
-            <video 
-                src="video/anime video.gif" class="hero-video" autoplay muted loop>
+            <video src="video/anime video.gif" class="hero-video" autoplay muted loop>
         </section>
         <nav class="nav-bar hero-nav">
             <h1 class="logo"><a href="index.html">Danielle Larson</a></h1>
@@ -21,9 +20,15 @@
                 <li class="nav-item"><a href="shop.html">Shop</a></li>
                 <li class="nav-item"><a href="about.html">About</a></li>
                 <li class="nav-item social-nav-item">
-                    <a href="https://instagram.com/a_n_m1913" aria-label="Link to Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                    <a href="https://instagram.com/a_n_m1913" aria-label="Link to Instagram"
+                        ><i class="fab fa-instagram" aria-hidden="true"></i
+                    ></a>
+                </li> 
                 <li class="nav-item social-nav-item">
-                    <a href="https://github.com/larsondanielle" aria-label="Link to Github"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                    <a href="https://github.com/larsondanielle" aria-label="Link to Github"
+                        ><i class="fab fa-github" aria-hidden="true"></i
+                    ></a>
+                </li>
             </ul>
         </nav>
         <section class="hero-text-box">
@@ -33,7 +38,7 @@
         </section>
     </header>
 <footer>
-    <nav class="nav-bar hero-nav">
+    <nav class="nav-bar footer-nav">
         <ul class="nav-menu">
             <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
             <li class="nav-item"><a href="shop.html">Shop</a></li>
@@ -41,9 +46,13 @@
             <li class="nav-item logo footer-logo"><a href="index.html">Danielle Larson</a></li>
         </ul>
     </nav>
-<section class="footer-social">
-    <a href="https://instagram.com/a_n_m1913" aria-label="Link to Instagram"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
-    <a href="https://github.com/larsondanielle" aria-label="Link to Github"><i class="fab fa-github fa-3x" aria-hidden="true"></i></a>
+    <section class="footer-social">
+        <a href="https://instagram.com/a_n_m1913" aria-label="Link to Instagram"
+            ><i class="fab fa-instagram fa-3x" aria-hidden="true"></i
+        ></a>
+        <a href="https://github.com/larsondanielle" aria-label="Link to Github"
+            ><i class="fab fa-github fa-3x" aria-hidden="true"></i
+    ></a>
 </section>
 <p class="footer-copyright">Copyright &copy; 2020</p>
 </footer>
