--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="hero-body">
 <header class="hero-box">
         <section class="hero-image-box">
-            <video src="video/anime video.gif" class="hero-video" autoplay muted loop>
+            <img src="video/anime video.gif" class="hero-img">
         </section>
         <nav class="nav-bar hero-nav">
             <h1 class="logo"><a href="index.html">Danielle Larson</a></h1>
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <section class="hero-text-box">
-            <h1 class="her-heading">Find The Cruel And Unusual</h1>
+            <h1 class="hero-heading">Find The Cruel And Unusual</h1>
             <p class="hero-text">Explore the Arts with Danielle Larson</p>
             <p><button class="hero-button">View Portfolio</button></p>
         </section>
