video homepage change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="hero-body">
 <header class="hero-box">
         <section class="hero-image-box">
-            <img src="video/anime video.gif" class="hero-img">
+            <img src="video/anime-water.gif" class="hero-img">
         </section>
         <nav class="nav-bar hero-nav">
             <h1 class="logo"><a href="index.html">Danielle Larson</a></h1>
