added shop page

--- a/shop.html
+++ b/shop.html
@@ -32,7 +32,43 @@
 <main class="shop-page">
     <section class="text-box">
         <h1>Shop</h1>
-        <p>Hand made pieces of artwork that you can pick from and select what you'd like it on listed below each image.  Each piece was created by Danielle Larson and </p>
+        <p>Hand made pieces of artwork that you can pick from and select what you'd like it on listed below each image.  Each piece was created by Danielle Larson and check out her instagram to ask for special, one-of-a-kind commissions such as drawings, paintings, and blankets.</p>
+    </section>
+    <section class="shop-box">
+        <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
+<script id="rb-xzfcxvzx" type="text/javascript">new RBExternalPortfolio('www.redbubble.com', 'anm13', 3, 4).renderIframe();</script>
+    </section>
+    <section class="curated-shop">
+        <div class="shop-item">
+            <a href="https://www.redbubble.com/i/pouch/Self-portrait-by-ANM13/62791811.440R3?asc=u"></a><img src="img/work-62791811-zipper-pouch.jpg" alt="Zipper pouch for sale with digital drawing">
+            <h2>Zipper Pouch</h2>
+            <p>Digitial drawing on zipper pouch makes it convenient for handling change.</p>
+            <a href="https://www.redbubble.com/assets/external_portfolio.js">Buy Now</a>
+        </div>
+        <div class="shop-item">
+            <a href="https://www.redbubble.com/i/tote-bag/Black-Lives-Matter-by-ANM13/62790295.PJQVX?asc=u"></a><img src="img/work-62790295-all-over-print-tote-bag.jpg" alt="Black lives matter tote bag">
+            <h2>Tote Bag</h2>
+            <p>Black lives matter on tote bag great for carrying items.</p>
+            <a href="https://www.redbubble.com/assets/external_portfolio.js">Buy Now</a>
+        </div>
+        <div class="shop-item">
+            <a href="https://www.redbubble.com/i/sticker/Tongue-Tied-by-ANM13/62782747.JCQM3?asc=u"></a><img src="img/work-62782747-glossy-sticker.jpg" alt="Glossy sticker of drawing with tongues in eyes">
+            <h2>Glossy Sticker</h2>
+            <p>Drawing of tongues coming out of eyes on glossy sticker perfect to add character to your water bottle.</p>
+            <a href="https://www.redbubble.com/assets/external_portfolio.js">Buy Now</a>
+        </div>
+        <div class="shop-item">
+            <a href="https://www.redbubble.com/i/art-print/The-seemed-fine-to-me-by-ANM13/62791532.1G4ZT?asc=u"></a><img src="img/work-62791532-art-print.jpg" alt="Art print with drawing of person reaching out">
+            <h2>Art Print</h2>
+            <p>'They seemed fine to me' art print to hang on your wall.</p>
+            <a href="https://www.redbubble.com/assets/external_portfolio.js">Buy Now</a>
+        </div>
+        <div class="shop-item">
+            <a href="https://www.redbubble.com/i/coasters/Pride-by-ANM13/62790938.E5I3N?asc=u"></a><img src="img/work-62790938-coasters-(set-of-4).jpg" alt="Pride coasters">
+            <h2>Coasters</h2>
+            <p>Pride coasters.</p>
+            <a href="https://www.redbubble.com/assets/external_portfolio.js">Buy Now</a>
+        </div>
     </section>
 </main>
 
