--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <main class="about-page">
         <section class="about-text">
             <h1>Danielle Larson</h1>
-            <p>Danielle Larson was born and raised in northeast Ohio and currently attends the Cleveland Institute of Art.  She's strived to be a freelance artist from a young age and most of her work has been self-taught.  Over the years, she's expanded her skillset and knowledge of the arts from art history to different mediums such as drawing, painting, digital art, and even expanded media. She hopes that her art will continue to grow and that she is able to work as a full time artist.</p>
+            <p>Danielle Larson was born and raised in northeast Ohio and currently attends the Cleveland Institute of Art.  She's strived to be a freelance artist from a young age and most of her work has been self-taught.  Over the years, she's expanded her skillset and knowledge of the arts from art history to different mediums such as drawing, painting, digital art, and even expanded media. She hopes that her art will continue to grow and inspire you and others as she works herself to become a full time artist.</p>
        
        <section class="about-social">
             <a href="https://instagram.com/a_n_m1913" aria-label="Link to Instagram"
