--- a/shop.html
+++ b/shop.html
@@ -32,7 +32,7 @@
 <main class="shop-page">
     <section class="text-box">
         <h1>Shop</h1>
-        <p>Hand made pieces of artwork that you can pick from and select what you'd like it on listed below each image.  Each piece was created by Danielle Larson and check out her instagram to ask for special, one-of-a-kind commissions such as drawings, paintings, and blankets.</p>
+        <p>Hand made pieces of art, each one created by Danielle Larson.  Find your favorite image and click on it to see other products it's available on such as mugs, phone cases, bags, prints, and much more.  Get in touch with Danielle through her instagram to ask about special, one-of-a-kind commissions such as drawings, paintings, and blankets.  Don't forget to check out the bottom of the page to see other products!</p>
     </section>
     <section class="shop-box">
         <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
