--- a/shop.html
+++ b/shop.html
@@ -49,7 +49,7 @@
             <a href="https://www.redbubble.com/i/tote-bag/Black-Lives-Matter-by-ANM13/62790295.PJQVX?asc=u"></a><img src="img/work-62790295-all-over-print-tote-bag.jpg" alt="Black lives matter tote bag">
             <h2>Tote Bag</h2>
             <p>Black lives matter on tote bag great for carrying items.</p>
-            <a href="https://www.redbubble.com/i/tote-bag/Black-Lives-Matter-by-ANM13/62790295.PJQVX?asc=u"">Buy Now</a>
+            <a href="https://www.redbubble.com/i/tote-bag/Black-Lives-Matter-by-ANM13/62790295.PJQVX?asc=u">Buy Now</a>
         </div>
         <div class="shop-item">
             <a href="https://www.redbubble.com/i/sticker/Tongue-Tied-by-ANM13/62782747.JCQM3?asc=u"></a><img src="img/work-62782747-glossy-sticker.jpg" alt="Glossy sticker of drawing with tongues in eyes">
