--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="hero-text-box">
             <h1 class="hero-heading">Find The Cruel And Unusual</h1>
             <p class="hero-text">Explore the Arts with Danielle Larson</p>
-            <p><button class="hero-button">View Portfolio</button></p>
+            <p><a href="portfolio.html"><button class="hero-button">View Portfolio</button></a></p>
         </section>
     </header>
 <footer>
